--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,29 @@ html {
   body {
     @apply bg-background text-foreground;
   }
-
+  .prose {
+    h1, h2, h3, h4, h5, h6 {
+      @apply font-bold ;
+    }
+    h1 { @apply text-4xl; }
+    h2 { @apply text-3xl; }
+    h3 { @apply text-2xl; }
+    h4 { @apply text-xl; }
+    h5 { @apply text-lg; }
+    h6 { @apply text-base; }
+    
+    p { @apply my-2 text-sm ; }
+    ul, ol { @apply my-2 pl-6; }
+    ul { @apply list-disc; }
+    ol { @apply list-decimal ; }
+    li { @apply my-2 text-sm; }
+    strong { @apply font-bold; }
+    em { @apply italic; }
+    a { @apply text-blue-600 hover:underline; }
+    code { @apply bg-gray-100 px-1 rounded; }
+    pre { @apply bg-gray-100 p-2 rounded overflow-x-auto; }
+    blockquote { @apply border-l-2 border-gray-300 pl-2 italic; }
+  }
 
 
   h1,
@@ -150,6 +172,7 @@ html {
   .poppins {
     font-family: var(--font-poppins);
   }
+
  
 }
 
@@ -182,7 +205,7 @@ html {
   }
 
   section {
-    padding: 8rem 0;
+    padding: 5rem 0;
   }
 
   section > p {
@@ -216,7 +239,9 @@ html {
   .btn {
     padding: 0.6rem 1.5rem;
   }
-
+  section {
+    padding: 2rem 0;
+  }
   section > p {
     width: var(--container-width-md);
   }
